# proc-gen-bach

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
Glitter/Headers/: AppRunner.hpp  Cube.hpp  FragmentShader.hpp  Scene.hpp  Shader.hpp  ShaderProgram.hpp  Square.hpp  Texture.hpp  Triangle.hpp  VertexShader.hpp  glitter.hpp
Glitter/Shaders/: fragmentShader.frag  fragmentShaderSquare.frag  vertexShader.vert  vertexShaderSquare.vert
Glitter/Sources/: AppRunner.cpp  Scene.cpp  Shader.cpp  ShaderProgram.cpp  Square.cpp  Texture.cpp  Triangle.cpp  main.cpp
Glitter/Sources/Shapes/: Cube.cpp  Triangle.cpp
core/: Application.cpp  Application.h  includes.h  main.cpp
src/: Scene.hpp  includes.h  main.cpp
src/headers/: AppRunner.hpp  Camera.hpp  CpuScene.hpp  CpuSquare.hpp  CpuTimer.hpp  Cube.hpp  Drawable.hpp  EventHandler.hpp  FragmentShader.hpp  NoiseScene.hpp  NoiseSceneEventHandler.hpp  NoiseSquare.hpp  NoisyScene.hpp  NoisySquare.hpp  Scene.hpp  Shader.hpp  ShaderProgram.hpp  ShaderScene.hpp  ShaderSquare.hpp  Square.hpp  Texture.hpp  TextureArray.hpp  Timer.hpp  Triangle.hpp  VertexShader.hpp  includes.hpp
src/headers/VertexGenerators/: PerlinVertexGenerator.hpp  VertexGenerator.hpp
src/headers/helpers/: Incremental.hpp  RangeIncremental.hpp
src/shaders/: ads.frag  ads.vert  adsPerPixel.frag  adsPerPixel.vert  diffuseFragmentShader.frag  diffuseVertexShader.vert  fragmentShaderSquare.frag  noiseShader.vert  vertexShaderSquare.vert
src/sources/: AppRunner.cpp  CpuScene.cpp  NoisyScene.cpp  Scene.cpp  ShaderProgram.cpp  ShaderScene.cpp  Texture.cpp
src/sources/shapes/: CpuSquare.cpp  NoisySquare.cpp  Square.cpp
